--- a/signup.html
+++ b/signup.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="row" style="justify-content:space-between; align-items:center;">
-          <div class="small">Already have an account? <a href="#">Log in</a></div>
+          <div class="small">Already have an account? <a href="signin.html">Log in</a></div>
           <button class="btn" id="submitBtn" type="submit">Create account</button>
         </div>
 
