--- a/signin.html
+++ b/signin.html
@@ -11,15 +11,21 @@
     <h2>Company Name</h2>
     <h3>Login</h3>
     <form action="#" method="POST">
+
+      <div class="field">
       <label for="email">Email</label>
       <input type="email" id="email" placeholder="Enter your email" required>
+      </div>  
 
+      <div class="field">
       <label for="password">Password</label>
       <input type="password" id="password" placeholder="Enter your password" required>
+      </div>
 
       <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
   </div>
+<script src="authentication.js"></script>
 </body>
 </html>
