--- a/adminDashoard.html
+++ b/adminDashoard.html
@@ -8,48 +8,93 @@
 </head>
 <body>
 
-<div class="dashboard-container">
-    <header>
-        <h1>Admin Dashboard</h1>
-        <h2>Manage Employees</h2>
-    </header>
+<!-- Navbar -->
+<nav>
+  <ul>
+    <li><a href="#" onclick="showSection('manageEmployees')">Manage Employees</a></li>
+    <li><a href="#" onclick="showSection('expenseRequests')">Expense Requests</a></li>
+  </ul>
+</nav>
 
-    <div class="action-bar">
-        <div class="search-filter-group">
-            <div class="search-bar">
-                <input type="search" id="searchInput" placeholder="Search by name, email...">
+<div class="container">
+
+  <!-- Manage Employees Section -->
+  <section id="manageEmployees" class="section active">
+    <div class="dashboard-container">
+        <header>
+            <h1>Admin Dashboard</h1>
+            <h2>Manage Employees</h2>
+        </header>
+
+        <div class="action-bar">
+            <div class="search-filter-group">
+                <div class="search-bar">
+                    <input type="search" id="searchInput" placeholder="Search by name, email...">
+                </div>
+                <div class="filter-bar">
+                    <select id="roleFilter">
+                        <option value="">All Roles</option>
+                        <option value="Manager">Manager</option>
+                        <option value="Employee">Employee</option>
+                    </select>
+                </div>
             </div>
-            <div class="filter-bar">
-                <select id="roleFilter">
-                    <option value="">All Roles</option>
-                    <option value="Manager">Manager</option>
-                    <option value="Employee">Employee</option>
-                </select>
-            </div>
+            <button class="btn btn-primary" id="addUserBtn">+ Add New User</button>
         </div>
-        <button class="btn btn-primary" id="addUserBtn">+ Add New User</button>
-    </div>
 
-    <div class="user-table-wrapper">
-        <table id="userTable">
-            <thead>
-                <tr>
-                    <th>Employee Name</th>
-                    <th>Email</th>
-                    <th>Department</th>
-                    <th>Role</th>
-                    <th>Reports To</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Users dynamically added here -->
-            </tbody>
-        </table>
+        <div class="user-table-wrapper">
+            <table id="userTable">
+                <thead>
+                    <tr>
+                        <th>Employee Name</th>
+                        <th>Email</th>
+                        <th>Department</th>
+                        <th>Role</th>
+                        <th>Reports To</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Users dynamically added here -->
+                </tbody>
+            </table>
+        </div>
     </div>
+  </section>
+
+  <!-- Expense Requests Section -->
+  <section id="expenseRequests" class="section">
+    <div class="dashboard-container">
+        <header>
+            <h1>Expense Requests</h1>
+            <h2>Approve or Reject Employee Expenses</h2>
+        </header>
+
+        <div class="user-table-wrapper">
+            <table id="expenseTable">
+                <thead>
+                    <tr>
+                        <th>Employee</th>
+                        <th>Amount</th>
+                        <th>Currency</th>
+                        <th>Category</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Expense requests dynamically added here -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+  </section>
+
 </div>
 
-<!-- Modal -->
+<!-- Modal for Add/Edit User -->
 <div id="userModal" class="modal-overlay">
     <div class="modal-content">
         <div class="modal-header">
