--- a/signup.html
+++ b/signup.html
@@ -29,13 +29,17 @@
         <div class="field">
           <label for="password">Password</label>
           <input id="password" name="password" type="password" placeholder="Choose a strong password" minlength="6" required />
-          <div class="small">Min 6 characters</div>
         </div>
 
         <div class="field">
           <label for="confirm">Confirm password</label>
           <input id="confirm" name="confirm" type="password" placeholder="Re-type password" minlength="6" required />
           <div id="matchErr" class="error" style="display:none"></div>
+        </div>
+        
+        <div class="field">
+          <label for="currency">Country</label>
+          <input for="Country" name="Country" type="text" placeholder="Enter country name">
         </div>
 
         <div class="row" style="justify-content:space-between; align-items:center;">
