--- a/employeeDashboard2.html
+++ b/employeeDashboard2.html
@@ -9,10 +9,11 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f4f4f9;
+      background-color:#070a30;
+      color: white;
     }
     nav {
-      background-color: #333;
+      background-color: #03051f;
       color: white;
       padding: 1rem;
     }
@@ -36,7 +37,7 @@
       max-width: 1000px;
       margin: 2rem auto;
       padding: 2rem;
-      background-color: white;
+      background-color: #070a30;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     .section {
@@ -81,7 +82,7 @@
       text-align: left;
     }
     table th {
-      background-color: #f2f2f2;
+      background-color:#03051f;
     }
 
     /* --- NEW STYLES FOR STATUS --- */
