--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Create Account</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="container" role="main">
@@ -29,6 +30,7 @@
         <div class="field">
           <label for="password">Password</label>
           <input id="password" name="password" type="password" placeholder="Choose a strong password" minlength="6" required />
+          <div class="small">(Min 6 characters)</div>
         </div>
 
         <div class="field">
@@ -36,16 +38,13 @@
           <input id="confirm" name="confirm" type="password" placeholder="Re-type password" minlength="6" required />
           <div id="matchErr" class="error" style="display:none"></div>
         </div>
-        
-        <div class="field">
-          <label for="currency">Country</label>
-          <input for="Country" name="Country" type="text" placeholder="Enter country name">
-        </div>
 
-        <div class="row" style="justify-content:space-between; align-items:center;">
-          <div class="small">Already have an account? <a href="signin.html">Log in</a></div>
+        <div class="createAcc" >
           <button class="btn" id="submitBtn" type="submit">Create account</button>
         </div>
+
+        <div class="row"><div class="small">Already have an account? <a href="signin.html">Log in</a></div></div>
+        
 
       </form>
     </section>
